test-data/negative/missing_package_name.aadl
-- ERROR: Missing package name after 'package' keyword
package
public
end ;
